feat(video): change all video urls to mp4, add courses list, course card, course modal video, basic styles for list and card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body style="margin: 0; padding: 0; box-sizing: border-box;">
     <div id="root"></div>
+    <div id="modals"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
